fixed navbar icon

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,10 +2,10 @@
   <a class="navbar-brand poke" href="#">
     <img src="https://www.freepnglogos.com/uploads/pokemon-symbol-logo-png-31.png" width="50" height="50" alt="logo">
   </a>
-   <a id="home" href="/">
-    <%= image_tag "/assets/home.png", alt: "alttext", width: 40, height: 40 %>
+   <a id="home" class="text-decoration-none text-dark" style="font-size: 35px;" href="/">
+    <i class="fas fa-home"></i>
   </a>
-  <a id="plus" href="/pokemons/new">
-    <%= image_tag "/assets/plus.png", alt: "alttext", width: 40, height: 40 %>
+  <a id="plus" class="text-decoration-none text-dark" style="font-size: 35px;" href="/pokemons/new">
+    <i class="fas fa-plus-circle"></i>
   </a>
 </nav>
