--- a/app/views/pokemons/index_grass.html.erb
+++ b/app/views/pokemons/index_grass.html.erb
@@ -49,6 +49,8 @@
                 <%= image_tag "http://www.jemome.com/cdn/2010/07/fire-type-pokemon-symbol_260435.png", alt: "alttext", width: 20, height: 20 %> <%= type.name %>
                 <% elsif type.name == "flying" %>
                 <%= image_tag "http://pm1.narvii.com/5918/f460b045c1a8a2d30323ccae66ae1466d9d29150_00.jpg", alt: "alttext", width: 20, height: 20 %> <%= type.name %>
+                <% elsif type.name == "water" %>
+                <%= image_tag "https://i.pinimg.com/originals/c3/61/39/c3613977779d28d1da20e3d814ac1ce0.png", alt: "alttext", width: 20, height: 20 %> <%= type.name %>
                 <% else %>
                 <%= type.name %>
                 <% end %>
